v2.3.3 "Centaur" (2017-Apr-XY)
------------------------------
* Enum Multiplexing was moved from Server to AnalysisConfig.
* InNetwork was renamed to NetworkFactory as well as extended for this purpose.
* Functional tests:
  - Replaced System.out.println( e.toString() ) with e.printStackTrace()
  - Converted the output test to a JUnit test automatically compiling the generated class.

v2.3.2 "Centaur" (2017-Mar-13)
------------------------------
* Advanced the structure of package unikl.disco.nc (sub-)packages for analyses, arrivalBounds and operations.
* OutputBound.java: New class in unikl.disco.nc.operations providing the DNC output bound computation (reduces code duplication).
* LeftOverService: A generic compute(...) method dispatches according to the analysis configuratoin's multiplexing flag. Used in SFA and PbooAB.
* Fix: PBOO Arrival Bounding with per-hop left-over service now uses each server's max SC instead of an overly pessimistic entire common path's one.
* Fix: PMOO Arrival Bounding's shortcut for single-hop subpaths was actually dead code before.
* Added findbugs library.

v2.3.1 "Centaur" (2017-Feb-28)
------------------------------
* Evolved the factory pattern for Num implementations to a (kind of) abstract factory pattern for simplified code and improved extensibility.
* Package minplus: Improved stability by handling distorted input (null or empty sets). 
* Deconvolution: Renamed private method deconvolveGeneric to deconvolve_mTB_mRL to better reflect its capabilities. 

v2.3.0 "Centaur" (2017-Jan-11)
------------------------------
* Rework of the number abstraction layer in unikl.disco.numbers:
  The DiscoDNC is now built on a factory pattern with four implementations -- the lower body and the four legs of our new Centaur release. 
  - Num.java is now an interface to be implemented by the actual number representations in unikl.disco.numbers.implementations.